--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=8000
 MONGOOSE_URI="mongodb+srv://vishalsahani1444:FQY93OFBvHm62b7j@cluster1.mqden.mongodb.net"
-CORS_ORIGIN=*
+CORS_ORIGIN=
 ACCESS_TOKEN_SECRET=chai-aur-code
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=chai-aur-backend
